# llm-toolkit-schema

./: CNAME  LLM_TOOLKIT_SCHEMA_SOURCE_OF_TRUTH.md  README.md  RELEASE.md  pyproject.toml
docs/: changelog.md  installation.md  quickstart.md
docs/api/: export.md
docs/user_guide/: export.md
llm_schema/: __init__.py  exceptions.py  signing.py  stream.py  types.py  validate.py
llm_schema/export/: __init__.py  jsonl.py  otlp.py  webhook.py
llm_schema/namespaces/: __init__.py  cache.py  cost.py  diff.py  eval_.py  fence.py  guard.py  prompt.py  redact.py  template.py  trace.py
llm_toolkit_schema/: __init__.py  actor.py  types.py
llm_toolkit_schema/export/: __init__.py  otel_bridge.py  otlp.py
llm_toolkit_schema/namespaces/: __init__.py  inspect.py  prompt.py
schemas/v1.0/: schema.json
tests/: test_actor.py  test_export_jsonl.py  test_export_otel_bridge.py  test_export_otlp.py  test_export_webhook.py  test_namespaces.py  test_phase5_coverage.py  test_signing.py  test_stream.py  test_types.py  test_validate.py
